--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,8 @@
 {
   "compilerOptions": {
     "strictNullChecks": true,
-    "target": "es5"
+    "target": "es5",
+    "module": "es6"
   },
   "exclude": [
     "node_modules"
