--- a/package.json
+++ b/package.json
@@ -4,5 +4,10 @@
   "description": "Turn-based incremental game",
   "private": true,
   "author": "KarbonKitty",
-  "license": "MIT"
+  "license": "MIT",
+  "dev-dependencies": {
+    "rollup": "^0.52.0",
+    "rollup-plugin-node-resolve": "^3.0.3",
+    "rollup-plugin-replace": "^2.0.0"
+  }
 }
